--- a/site.yaml
+++ b/site.yaml
@@ -26,6 +26,14 @@
      - apache2
      - libapache2-mod-php
     when: ansible_distribution == "Ubuntu"
+  - name: Copy default_html for site to server
+    tags: apache,httpd
+    copy:
+     src: default_site.html
+     dest: /var/www/html/index.html
+     owner: root
+     group: root
+     mode: 0644
 
   - name: Install httpd and php Amazon Linux
     tags: apache,httpd,amazon
