--- a/roles/aws-alarm-rds/tasks/_create_storage_alarm.yml
+++ b/roles/aws-alarm-rds/tasks/_create_storage_alarm.yml
@@ -5,14 +5,14 @@
     state: "{{ alarm_conf.state | default('present') }}"
     region: "{{ alarm_conf.rds_alarms_region }}"
     name: "{{ alarm_conf.name }}"
-    description: "{{ 'Disk space for '+ alarm_conf.DBInstanceIdentifier+' Database '+ alarm_conf.warning_threshold +'% Used' }}"
+    description: "{{ 'Disk space for '+ alarm_conf.DBInstanceIdentifier+' Database '+ alarm_conf.warning_threshold |string +'% Used' }}"
     metric: "FreeStorageSpace"
     namespace: "AWS/RDS"
     statistic: "{{ alarm_conf.statistic | default(rds_default_statistic)}}"
-    comparison: "{{ alarm_conf.comparison | default("<=") }}"
+    comparison: "{{ alarm_conf.comparison | default('<=') }}"
     threshold: "{{  storage_warning_threshold  }}"
     period: "{{ alarm_conf.period | default(rds_alarms_period) }}"
     evaluation_periods: "{{ rds_alarms_evaluation_periods }}"
     unit: "Bytes"
     dimensions: {"DBInstanceIdentifier": "{{ alarm_conf.DBInstanceIdentifier }}"}
-    alarm_actions: "{{ rds_alarms_common_action_list | union(alarm_conf.alarm_actions) }}"
+    alarm_actions: "{{ rds_alarms_common_action_list }}"
