--- a/roles/aws-alarm-rds/tasks/_alarm_rds_create.yml
+++ b/roles/aws-alarm-rds/tasks/_alarm_rds_create.yml
@@ -1,16 +1,24 @@
+---
+
+#- name: print var
+#  debug:
+#    var: alarm_config
 
 - name: Describe RDS Instance
-  shell: aws --region="{{ alarm_conf.rds_alarms_region }}" rds describe-db-instances -db-instance-identifier alarm_conf.DBInstanceIdentifier
-  register: rds_alarms_instance_details
+  shell: aws --region="{{ alarm_config.rds_alarms_region }}" rds describe-db-instances --db-instance-identifier {{ alarm_config.DBInstanceIdentifier }}
+  register: rds_instance_details
 
 
 - set_fact:
-    memory_warning_threshold: "{{ (rds_alarms_instance_class[rds_alarms_instance_details.DBInstances.DBInstanceClass].memory | float) * 10000000 * (100 - alarm_config.warning_threshold ) }}"
-  when: alarm_conf.metric == 'FreeableMemory' 
+    rds_alarms_instance_details: "{{ (rds_instance_details.stdout | from_json).DBInstances }}"
 
 - set_fact:
-    storage_warning_threshold: "{{ (rds_alarms_instance_details.DBInstances.AllocatedStorage | float) * 10000000 * (100 - alarm_config.warning_threshold ) }}"
-  when: alarm_conf.metric == 'FreeStorageSpace' 
+    memory_threshold: "{{ (rds_alarms_instance_class[rds_alarms_instance_details[0].DBInstanceClass].memory | float) * 10000000 * (100 - alarm_config.warning_threshold ) }}"
+  when: alarm_config.metric == 'FreeableMemory'
+
+- set_fact:
+    storage_threshold: "{{ (rds_alarms_instance_details[0].AllocatedStorage | float) * 10000000 * (100 - alarm_config.warning_threshold ) }}"
+  when: alarm_config.metric == 'FreeStorageSpace' 
 
 
 
@@ -24,12 +32,12 @@
   include_tasks: "{{ playbook_dir }}/roles/aws-alarm-rds/tasks/_create_memory_alarm.yml"
   vars:
     alarm_conf: "{{ alarm_config }}"
-    memory_warning_threshold: "{{ memory_warning_threshold }}"
+    memory_warning_threshold: "{{ memory_threshold }}"
   when: alarm_config.metric == 'FreeableMemory'
 
 - name: Create RDS STORAGE Alarm
   include_tasks: "{{ playbook_dir }}/roles/aws-alarm-rds/tasks/_create_storage_alarm.yml"
   vars:
     alarm_conf: "{{ alarm_config }}"
-    storage_warning_threshold: "{{ storage_warning_threshold }}"
+    storage_warning_threshold: "{{ storage_threshold }}"
   when: alarm_config.metric == 'FreeStorageSpace'
