--- a/roles/aws-alarm-rds/tasks/_create_cpu_alarm.yml
+++ b/roles/aws-alarm-rds/tasks/_create_cpu_alarm.yml
@@ -5,7 +5,7 @@
     state: "{{ alarm_conf.state | default('present') }}"
     region: "{{ alarm_conf.rds_alarms_region }}"
     name: "{{ alarm_conf.name }}"
-    description: "{{ ' High '+  alarm_conf.metric+'( '+alarm_conf.warning_threshold+'%)'  +' for ' + alarm_conf.DBInstanceIdentifier }}"
+    description: "{{ ' High '+  alarm_conf.metric+'( '+alarm_conf.warning_threshold |string+'%)'  +' for ' + alarm_conf.DBInstanceIdentifier }}"
     metric: "CPUUtilization"
     namespace: "AWS/RDS"
     statistic: "{{ alarm_conf.statistic | default(rds_default_statistic)}}"
@@ -15,4 +15,4 @@
     evaluation_periods: "{{ rds_alarms_evaluation_periods }}"
     unit: "Percent"
     dimensions: {"DBInstanceIdentifier": "{{ alarm_conf.DBInstanceIdentifier }}"}
-    alarm_actions: "{{ rds_alarms_common_action_list | union(alarm_conf.alarm_actions) }}"
+    alarm_actions: "{{ rds_alarms_common_action_list }}"
