--- a/roles/aws-alarm-rds/tasks/_create_memory_alarm.yml
+++ b/roles/aws-alarm-rds/tasks/_create_memory_alarm.yml
@@ -5,7 +5,7 @@
     state: "{{ alarm_conf.state | default('present') }}"
     region: "{{ alarm_conf.rds_alarms_region }}"
     name: "{{ alarm_conf.name }}"
-    description: "{{ 'Low Memory Available for '+ alarm_conf.DBInstanceIdentifier+' '+ alarm_conf.warning_threshold +'% Used' }}"
+    description: "{{ 'Low Memory Available for '+ alarm_conf.DBInstanceIdentifier+' '+ alarm_conf.warning_threshold |string +'% Used' }}"
     metric: "FreeableMemory"
     namespace: "AWS/RDS"
     statistic: "{{ alarm_conf.statistic | default(rds_default_statistic)}}"
@@ -15,4 +15,4 @@
     evaluation_periods: "{{ rds_alarms_evaluation_periods }}"
     unit: "Bytes"
     dimensions: {"DBInstanceIdentifier": "{{ alarm_conf.DBInstanceIdentifier }}"}
-    alarm_actions: "{{ rds_alarms_common_action_list | union(alarm_conf.alarm_actions) }}"
+    alarm_actions: "{{ alarm_conf.alarm_actions | default(rds_alarms_common_action_list) }}"
