--- a/roles/aws-alarm-redshift/tasks/_create_cpu_alarm.yml
+++ b/roles/aws-alarm-redshift/tasks/_create_cpu_alarm.yml
@@ -7,9 +7,9 @@
     name: "{{ alarm_conf.name }}"
     description: "{{ ' High '+  alarm_conf.metric+'( '+alarm_conf.warning_threshold |string+'%)'  +' for ' + alarm_conf.DBInstanceIdentifier }}"
     metric: "CPUUtilization"
-    namespace: "AWS/RDS"
+    namespace: "AWS/Redshift"
     statistic: "{{ alarm_conf.statistic | default(rds_default_statistic)}}"
-    comparison: ">="
+    comparison: "{{ alarm_conf.comparison | default('>=') }}"
     threshold: "{{  alarm_conf.warning_threshold  }}"
     period: "{{ alarm_conf.period | default(rds_alarms_period) }}"
     evaluation_periods: "{{ rds_alarms_evaluation_periods }}"
