--- a/roles/aws-alarm-redshift/tasks/main.yml
+++ b/roles/aws-alarm-redshift/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
 # tasks file for aws-alarm-redshift
+
+- name: Create Alarm
+  include_tasks: "{{ playbook_dir }}/roles/aws-alarm-rds/tasks/_alarm_rds.yml"
+  vars:
+    rds_alarm_conf: "{{ item.value }}"
+  loop: "{{ aws_alarm_redshift| dict2items }}"
