--- a/roles/aws-alarm-redshift/tasks/_create_storage_alarm.yml
+++ b/roles/aws-alarm-redshift/tasks/_create_storage_alarm.yml
@@ -1,18 +1,18 @@
 ---
 
-- name: Create RDS CPU alarm
+- name: Create RDS Storage alarm
   ec2_metric_alarm:
     state: "{{ alarm_conf.state | default('present') }}"
     region: "{{ alarm_conf.rds_alarms_region }}"
     name: "{{ alarm_conf.name }}"
-    description: "{{ ' High '+  alarm_conf.metric+'( '+alarm_conf.warning_threshold |string+'%)'  +' for ' + alarm_conf.DBInstanceIdentifier }}"
-    metric: "CPUUtilization"
-    namespace: "AWS/RDS"
+    description: "{{ 'Disk space for '+ alarm_conf.DBInstanceIdentifier+' Database '+ alarm_conf.warning_threshold |string +'% Used' }}"
+    metric: "PercentageDiskSpaceUsed"
+    namespace: "AWS/Redshift"
     statistic: "{{ alarm_conf.statistic | default(rds_default_statistic)}}"
-    comparison: ">="
-    threshold: "{{  alarm_conf.warning_threshold  }}"
+    comparison: "{{ alarm_conf.comparison | default('<=') }}"
+    threshold: "{{  storage_warning_threshold  }}"
     period: "{{ alarm_conf.period | default(rds_alarms_period) }}"
     evaluation_periods: "{{ rds_alarms_evaluation_periods }}"
-    unit: "Percent"
+    unit: "Bytes"
     dimensions: {"DBInstanceIdentifier": "{{ alarm_conf.DBInstanceIdentifier }}"}
     alarm_actions: "{{ alarm_conf.alarm_actions | default(rds_alarms_common_action_list) }}"
