--- a/nginx/nginx.yaml
+++ b/nginx/nginx.yaml
@@ -1,12 +1,12 @@
 ---
 - name: "Install Nginx on EC2 machine"
-  hosts: ec2-nginx
+  hosts: aws_ec2
   become: true
   become_user: root
   gather_facts: true
   tasks:
     - name: "Install Nginx"
-      package: name=nginx state=present
+      yum: name=nginx state=present
     - name: "Start Nginx"
       service:
         name: nginx
