--- a/nginx/ansible.cfg
+++ b/nginx/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory= ./inventory
-private_key_file= ~/.ssh/ansible
-remote_user=ansadmin
+inventory= ./inventory/aws_ec2.yaml
+private_key_file= ~/keys/nginx.pem
+remote_user=ec2-user
 log_path=log/ansible.log
