--- a/nginx/nginx.yaml
+++ b/nginx/nginx.yaml
@@ -5,6 +5,8 @@
   become_user: root
   gather_facts: true
   tasks:
+    - name: "install epel release"
+      yum: name=epel-release
     - name: "Install Nginx"
       yum: name=nginx state=present
     - name: "Start Nginx"
